objects/Par_metro_Produto_Concorr_ncia__c.object
<CustomObject>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Indireto</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Pernod</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Parâmetro Produto Concorrência</relationshipLabel>
        <relationshipName>LAT_Par_metro_Produto_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_SKU__c</fullName>
        <formula>LAT_Product__r.LAT_Sku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Produto_Concorrencia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Parâmetro Produto Concorrência</relationshipLabel>
        <relationshipName>Par_metro_Produto_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_Pernod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Pernod</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parâmetro Produto Concorrência</relationshipLabel>
        <relationshipName>Par_metro_Produto_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Parâmetro Produto Concorrência</relationshipLabel>
        <relationshipName>Par_metro_Produto_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Produto_Pernod__r.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub__c</fullName>
        <label>Sub-Canal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canal__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atacadista</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Canais Alternativos</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
                <value>
                    <fullName>Supermarkets_ARG</fullName>
                </value>
                <value>
                    <fullName>Wholesalers_ARG</fullName>
                </value>
                <value>
                    <fullName>Distribuitors_ARG</fullName>
                </value>
                <value>
                    <fullName>Wineries_ARG</fullName>
                </value>
                <value>
                    <fullName>POS Supermarket_ARG</fullName>
                </value>
                <value>
                    <fullName>POS Wholesaler_ARG</fullName>
                </value>
                <value>
                    <fullName>Convinence Stores_ARG</fullName>
                </value>
                <value>
                    <fullName>POS Wineries_ARG</fullName>
                </value>
                <value>
                    <fullName>Direct On-Trade_ARG</fullName>
                </value>
                <value>
                    <fullName>Indirect On-Trade_ARG</fullName>
                </value>
                <value>
                    <fullName>Supermarkets_URU</fullName>
                </value>
                <value>
                    <fullName>Convinence Stores_URU</fullName>
                </value>
                <value>
                    <fullName>Liquor Stores_URU</fullName>
                </value>
                <value>
                    <fullName>Distribuitors_URU</fullName>
                </value>
                <value>
                    <fullName>Direct On-Trade_URU</fullName>
                </value>
                <value>
                    <fullName>Indirect On-Trade_URU</fullName>
                </value>
                <value>
                    <fullName>Border_URU</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Specialized Retail</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Parâmetro Produto Concorrência</label>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>NAME</columns>
        <columns>Canal__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Product__c</columns>
        <columns>Marca__c</columns>
        <columns>Produto_Concorrencia__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Canal__c</field>
            <operation>equals</operation>
            <value>On Trade</value>
        </filters>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAR-{0}</displayFormat>
        <label>Nome da Parâmetro Produto Concorrência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parâmetro Produto Concorrência</pluralLabel>
    <recordTypes>
        <fullName>PPC_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPC_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <recordTypes>
        <fullName>Produtos_Concorr_ncia</fullName>
        <active>true</active>
        <description>Produtos Concorrência (Preços Praticados, Estoque de Produtos e Compra de Produtos).</description>
        <label>Produtos Concorrência</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sellout</fullName>
        <active>true</active>
        <description>Lista de Produtos Sellout</description>
        <label>Sellout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>